objects/ASI_GnH_Recipient_Master__c.object
<CustomObject>
    <description>G&amp;H Recipient Master data, used by following countries:
- Korea</description>
    <fields>
        <fullName>ASI_GnH_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Company_Address__c</fullName>
        <label>Company Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Organization__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_GnH_Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>G&amp;H Recipient Master</label>
    <listViews>
        <fullName>All_KR_GnH_External_Recipient</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Organization__c</columns>
        <columns>ASI_GnH_Title__c</columns>
        <columns>ASI_GnH_Company_Address__c</columns>
        <columns>ASI_GnH_Email__c</columns>
        <columns>ASI_GnH_Mobile__c</columns>
        <columns>ASI_GnH_Active__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Recipient_Master__c.ASI_GnH_KR_Recipient_Master</value>
        </filters>
        <label>All KR G&amp;H External Recipient</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_GnH_PR_Internal_Recipient</fullName>
        <columns>NAME</columns>
        <columns>ASI_GnH_Organization__c</columns>
        <columns>ASI_GnH_Title__c</columns>
        <columns>ASI_GnH_Company_Address__c</columns>
        <columns>ASI_GnH_Email__c</columns>
        <columns>ASI_GnH_Mobile__c</columns>
        <columns>ASI_GnH_Active__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Recipient_Master__c.ASI_GnH_KR_PR_Staffs_Master</value>
        </filters>
        <label>All KR G&amp;H PR Internal Recipient</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_KR_GnH_Recipient_Master</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ASI_GnH_Organization__c</columns>
        <columns>ASI_GnH_Title__c</columns>
        <columns>ASI_GnH_Company_Address__c</columns>
        <columns>ASI_GnH_Email__c</columns>
        <columns>ASI_GnH_Mobile__c</columns>
        <columns>ASI_GnH_Active__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Recipient_Master__c.ASI_GnH_KR_Recipient_Master</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_GnH_Recipient_Master__c.ASI_GnH_KR_PR_Staffs_Master</value>
        </filters>
        <label>All KR G&amp;H Recipient Master</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_KOR_All_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>G&amp;H Recipient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>G&amp;H Recipient Master</pluralLabel>
    <recordTypes>
        <fullName>ASI_GnH_KR_PR_Staffs_Master</fullName>
        <active>true</active>
        <label>ASI GnH KR PR Staffs Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_GnH_KR_Recipient_Master</fullName>
        <active>true</active>
        <label>ASI GnH KR Recipient Master</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>